<resources>
    <string name="app_name">Card collector</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="continueWithoutLogin">Continue without Login</string>
    <string name="cardLogo">Card logo</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="collection">Collection</string>
    <string name="cardName">Card name</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="quantity">Quantity:</string>
    <string name="promo">Promo</string>
    <string name="foil">Foil</string>
    <string name="back">Back</string>


    <string name="wrongInputs">Wrong username or password</string>
    <string name="workInProgress">Work in progress</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cardWithColon">Card:</string>
    <string name="quantityWithColon">Quantity:</string>
    <string name="promoWithColon">Promo:</string>
    <string name="foilWithColon">Foil:</string>
    <string name="expansionWithColon">Expansion:</string>
    <string name="noCardName">Enter card name</string>
    <string name="comma">,</string>
    <string name="spaceBlank">\u0020</string>



    <string-array name="expansions">
        <item>War of the Spark</item>
        <item>Ravnica Allegiance</item>
        <item>Guilds of Ravnica</item>
        <item>Dominaria</item>
    </string-array>
</resources>
