<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity"
        android:background="@color/colorBackground">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">

        <EditText
                android:id="@+id/cardNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cardName"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:ems="20" android:layout_marginTop="32dp" android:layout_alignParentTop="true"/>
        <TextView
                android:text="@string/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantityTextView"
                android:layout_marginTop="32dp"
                android:layout_below="@+id/cardNameEditText"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colorText" android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                android:layout_alignParentLeft="true"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:layout_toEndOf="@+id/quantityTextView" android:layout_toRightOf="@+id/quantityTextView"
                android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                android:layout_alignTop="@+id/quantityTextView" android:id="@+id/quantityRadioGroup">
            <RadioButton
                    android:text="@string/one"
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/radioButton"/>
            <RadioButton
                    android:text="@string/two"
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                    android:layout_height="wrap_content" android:id="@+id/radioButton2"/>
            <RadioButton
                    android:text="@string/three"
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                    android:layout_height="wrap_content" android:id="@+id/radioButton3"/>
            <RadioButton
                    android:text="@string/four"
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                    android:layout_height="wrap_content" android:id="@+id/radioButton4"/>
        </RadioGroup>
        <CheckBox
                android:id="@+id/promoCheckBox"
                android:text="@string/promo"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="32dp"
                android:layout_below="@+id/quantityTextView"
                android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
                android:layout_alignLeft="@+id/quantityTextView" android:layout_alignStart="@+id/quantityTextView"/>
        <CheckBox
                android:text="@string/foil"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/foilCheckBox"
                android:layout_marginTop="16dp" android:layout_below="@+id/promoCheckBox" android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp" android:layout_alignLeft="@+id/promoCheckBox"
                android:layout_alignStart="@+id/promoCheckBox"/>
        <Spinner
                android:id="@+id/expansionsSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="32dp"
                android:layout_below="@+id/foilCheckBox" android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp" android:layout_alignLeft="@+id/foilCheckBox"
                android:layout_alignStart="@+id/foilCheckBox"/>
        <Button
                android:text="@string/back"
                android:background="@drawable/rounded_button"
                android:layout_width="160dp"
                android:layout_height="60dp" android:id="@+id/backButton" android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp" android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp" android:layout_marginStart="0dp" android:layout_alignParentLeft="true"/>
        <Button
                android:text="@string/add"
                android:background="@drawable/rounded_button"
                android:layout_width="160dp"
                android:layout_height="60dp" android:id="@+id/addButton" android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp" android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>