<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorBackground">
    <ImageView
            android:id="@+id/cardImageView"
            android:layout_width="259dp"
            android:layout_height="294dp"
            app:srcCompat="@drawable/ic_poker"
            android:tint="@color/colorCard"
            tools:ignore="VectorDrawableCompat" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cardLogo"/>
    <EditText
            android:id="@+id/usernameEditText"
            android:hint="@string/username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:background="@drawable/rounded_edit_text"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardImageView"
            app:layout_constraintEnd_toEndOf="@+id/cardImageView"
            app:layout_constraintStart_toStartOf="@+id/cardImageView" android:inputType="textEmailAddress"/>
    <EditText
            android:id="@+id/passwordEditText"
            android:hint="@string/password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:background="@drawable/rounded_edit_text"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
            app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
            app:layout_constraintStart_toStartOf="@+id/usernameEditText" android:inputType="textPassword"/>
    <Button
            android:id="@+id/signInButton"
            android:text="@string/signIn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:textColor="@color/colorText"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"/>
    <TextView
            android:id="@+id/forgotTextView"
            android:text="@string/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            app:layout_constraintStart_toStartOf="@+id/signInButton"
            app:layout_constraintEnd_toEndOf="@+id/signInButton"/>
    <TextView
            android:id="@+id/continueTextView"
            android:text="@string/continueWithoutLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forgotTextView"
            app:layout_constraintStart_toStartOf="@+id/signInButton"
            app:layout_constraintEnd_toEndOf="@+id/signInButton"
            app:layout_constraintHorizontal_bias="0.494"
    />
</android.support.constraint.ConstraintLayout>